--- a/src/html/more/best.html
+++ b/src/html/more/best.html
@@ -5,79 +5,155 @@
 })
 
 <body>
-    @@include('../../parts/header.html', {
-    "activeItem": ""
-    })
+        @@include('../../parts/header.html', {
+        "activeItem": ""
+        })
 
-    <div class="container container--main" style="margin-bottom: 70px">
-        <h1 class="display-5 fw-bold">ЛУЧШЕЕ</h1>
-        <div class="d-flex flex-wrap mb-3 align-items-center">
-            <p class="mb-0">
-                <a href="/p/" aria-label="Смотреть все статьи Спешиал" class="link">Статьи</a>
-            </p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="mx-2 icon" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-            </svg>
-            <p class="mb-0">
-                <a href="/more/" aria-label="Смотреть все статьи Спешиал" class="link">Направления</a>
-            </p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="mx-2 icon" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-            </svg>
-            <p class="mb-0">Лучшее</p>
-        </div>
-    </div>
-
-    <main class="container container--main">
-
-        <div style="margin-bottom: 50px">
-            <h1>Статьи</h1>
-            <ul class="fs-4">
-                <li><a href="/p/how-to-sell-on-buy-markets/" class="link">Как успешно продавать на Б/У рынках</a></li>
-                <li><a href="/p/communication-with-clients-on-the-internet/" class="link">Общение с клиентами в
-                        интернете</a></li>
-                <li><a href="/p/used-market-what-is-it-with-what-it-is-eaten/" class="link">Б/У рынок: что это, с чем
-                        его едят?</a></li>
-                <li><a href="/p/the-path-of-a-programmer-is-a-difficult-path/" class="link">Путь программиста — это
-                        трудный путь?</a></li>
-                <li><a href="/p/project-development-history-live.creagoo.ru-its-forced-closure/" class="link">История
-                        live.creagoo.ru — вынужденное закрытие</a></li>
-                <li><a href="/p/how-did-i-start-learning-programming/" class="link">С чего я начал изучать
-                        программирование</a></li>
-                <li><a href="/p/how-i-fight-against-burnout/" class="link">Как я борюсь против выгорания</a></li>
-                <li><a href="/p/how-i-develop-websites-in-php/" class="link">Как я разрабатываю сайты на PHP</a></li>
-                <li><a href="/p/pet-project-development-what-is-it-and-for-what/" class="link">Разработка pet-проектов —
-                        что это и для чего?</a></li>
-                <li><a href="/updates/great-news-channel-special/" class="link">Обновление медиа канала Special</a></li>
-                <li><a href="/updates/change-creagoo-ru-simplify-improve-and-share/" class="link">Упрощение, улучшение и
-                        «Поделиться»</a></li>
-                <li><a href="/updates/novyy-sayt-creagoo-ru/" class="link">Новый сайт creagoo.ru</a></li>
-                <li><a href="/games/babkaonthehuntclassic/" class="link">Babka On The Hunt</a></li>
-                <li><a href="/games/sweetness/" class="link">Sweetness</a></li>
-                <li><a href="/games/rememberthesecards/" class="link">Запомни эти карты</a></li>
-                <li><a href="/games/rockpaperscissors/" class="link">Камень ножницы бумага</a></li>
-                <li><a href="/tech/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
-                <li><a href="/tech/difference-in-macbooks-for-3-years/" class="link">Разница в макбуках за 3 года</a>
-                </li>
-                <li><a href="/tech/ipad-mini-4-is-an-ambiguous-device/" class="link">iPad mini 4 — неоднозначный
-                        девайс</a></li>
-                <li><a href="/tech/the-new-generation-of-the-iphone-xr-device/" class="link">Новое поколение устройства
-                        — iPhone
-                        XR</a></li>
-                <li><a href="/tech/macbook-pro-2014-13-review/" class="link">Macbook Pro 2014 13' — обзор</a></li>
-                <li><a href="/tech/experience-using-iphone-6s-for-six-months/" class="link">Опыт использования iPhone 6s
-                        в
-                        течение полугода</a></li>
-            </ul>
+        <div class="container container--main" style="margin-bottom: 70px">
+                <h1 class="display-5 fw-bold">ЛУЧШЕЕ</h1>
+                <div class="d-flex flex-wrap mb-3 align-items-center">
+                        <p class="mb-0">
+                                <a href="/p/" aria-label="Смотреть все статьи Спешиал" class="link">Статьи</a>
+                        </p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="mx-2 icon"
+                                viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                        d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                        </svg>
+                        <p class="mb-0">
+                                <a href="/more/" aria-label="Смотреть все статьи Спешиал" class="link">Направления</a>
+                        </p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="mx-2 icon"
+                                viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                        d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                        </svg>
+                        <p class="mb-0">Лучшее</p>
+                </div>
         </div>
 
-    </main>
+        <main class="container container--main">
 
-    @@include('../../parts/footer.html', {
+                <div style="margin-bottom: 50px">
+                        <h2 class="display-3 " >2023</h2>
 
-    })
+                        <ul class="fs-4">
+
+                                <li><a href="/p/communication-with-clients-on-the-internet/" class="link">Общение с
+                                                клиентами в
+                                                интернете</a></li>
+                                <li><a href="/p/used-market-what-is-it-with-what-it-is-eaten/" class="link">Б/У рынок:
+                                                что это, с чем
+                                                его едят?</a></li>
+
+                                <li><a href="/p/how-i-fight-against-burnout/" class="link">Как я борюсь против
+                                                выгорания</a></li>
+                                <li><a href="/p/how-i-develop-websites-in-php/" class="link">Как я разрабатываю сайты на
+                                                PHP</a></li>
+
+                                <li><a href="/updates/novyy-sayt-creagoo-ru/" class="link">Новый сайт creagoo.ru</a>
+                                </li>
+                                <li><a href="/tech/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
+                                <li><a href="/tech/difference-in-macbooks-for-3-years/" class="link">Разница в макбуках
+                                                за 3 года</a></li>
+                                <li><a href="/tech/ipad-mini-4-is-an-ambiguous-device/" class="link">iPad mini 4 —
+                                                неоднозначный девайс</a></li>
+                                <li><a href="/tech/the-new-generation-of-the-iphone-xr-device/" class="link">Новое
+                                                поколение устройства — iPhone
+                                                XR</a></li>
+                                <li><a href="/tech/macbook-pro-2014-13-review/" class="link">Macbook Pro 2014 13' —
+                                                обзор</a></li>
+                                <li><a href="/tech/experience-using-iphone-6s-for-six-months/" class="link">Опыт
+                                                использования iPhone 6s в
+                                                течение полугода</a></li>
+                        </ul>
+                </div>
+
+                <div style="margin-bottom: 50px">
+                        <h3 class="display-4" >2022</h3>
+
+                        <ul class="fs-4">
+                                <li><a href="/more/archive/how-i-started-learning-laravel/" class="link">Как я начал
+                                                изучать Laravel</a></li>
+
+                                <li><a href="/more/archive/games-on-huawei/" class="link">Игры на Huawei</a></li>
+                                <li><a href="/more/archive/how-i-upgraded-my-macbook-to-an-unsupported-macos/"
+                                                class="link">Как я обновлял макбук на
+                                                неподдерживаемую macOS</a></li>
+                                <li><a href="/more/archive/creagoo-blog-new-visual/" class="link">Creagoo Блог: новый
+                                                визуал</a></li>
+                                <li><a href="/more/archive/my-joy-iphone-6s/" class="link">Моя радость — iPhone 6s</a>
+                                </li>
+                                <li><a href="/more/archive/to-the-start-attention-march/" class="link">На старт,
+                                                внимание, марш!</a></li>
+                                <li><a href="/more/archive/how-does-game-testing-work/" class="link">Как происходит
+                                                тестирование игр</a></li>
+                                <li><a href="/more/archive/uploading-the-laravel-project-to-the-server/"
+                                                class="link">Выгрузка проекта Laravel на
+                                                сервер</a></li>
+                                <li><a href="/more/archive/the-next-creagoo-project-live.creagoo.ru/"
+                                                class="link">Следущий проект Creagoo —
+                                                live.creagoo.ru</a></li>
+                                <li><a href="/more/archive/this-is-my-macbook/" class="link">Это мой макбук</a></li>
+                        </ul>
+                </div>
+
+                <div style="margin-bottom: 50px">
+                        <h4 class="display-5 ">2021</h4>
+
+                        <ul class="fs-4">
+                                <li><a href="/more/archive/belated-result/" class="link">Запоздалый результат</a></li>
+                                <li><a href="/more/archive/cloud-storage-development/" class="link">Разработка облачного
+                                                хранилища</a></li>
+                                <li><a href="/more/archive/i-didnt-expect-this-babka-on-the-hunt-light/"
+                                                class="link">Такого я не ожидал... Babka On The
+                                                Hunt Light</a></li>
+                                <li><a href="/more/archive/the-development-of-the-babka-on-the-hunt-light-is-suspended/"
+                                                class="link">Приостанавливается
+                                                разработка Babka On The Hunt Light</a></li>
+                                <li><a href="/more/archive/skins-effects-and-more-babka-on-the-hunt-light/"
+                                                class="link">Скины, эффекты и другое — Babka
+                                                On The Hunt Light</a></li>
+                        </ul>
+                </div>
+
+                <div style="margin-bottom: 50px">
+                        <h5 class="fs-1">2020</h5>
+
+                        <ul class="fs-4">
+                                <li><a href="/more/archive/babka-on-the-hunt-light-development-is-progressing-successfully/"
+                                                class="link">Babka On The
+                                                Hunt Light — разработка продвигается успешно</a></li>
+                                <li><a href="/more/archive/babka-on-the-hunt-update-lolzas-and-achievements/"
+                                                class="link">Обновление Babka On The Hunt:
+                                                лолзы и достижения</a></li>
+                                <li><a href="/more/archive/coming-soon-update-babka-on-the-hunt/" class="link">В скором
+                                                времени: обновление Babka On The
+                                                Hunt</a></li>
+                                <li><a href="/more/archive/babka-on-the-hunt-a-new-form-of-updates/" class="link">Babka
+                                                On The Hunt: новая форма
+                                                обновлений</a></li>
+                                <li><a href="/more/archive/sweetness-new-menu/" class="link">Sweetness — новое меню</a>
+                                </li>
+                                <li><a href="/more/archive/i-guess-im-just-unlucky/" class="link">Наверное, мне просто
+                                                не везёт</a></li>
+                                <li><a href="/more/archive/update-babka-on-the-hunt/" class="link">Обновление Babka On
+                                                The Hunt</a></li>
+                                <li><a href="/more/archive/refusal-from-mega-nz/" class="link">Отказ от mega.nz</a></li>
+                                <li><a href="/more/archive/platform-support/" class="link">Поддержка платформ</a></li>
+                                <li><a href="/more/archive/creagoo-on-your-domain-name/" class="link">Creagoo на своем
+                                                доменном имене</a></li>
+                                <li><a href="/more/archive/results-of-the-first-academic-month/" class="link">Итоги
+                                                первого учебного месяца</a></li>
+                                <li><a href="/more/archive/subdomains/" class="link">Поддомены</a></li>
+                        </ul>
+                </div>
+
+        </main>
+
+        @@include('../../parts/footer.html', {
+
+        })
 </body>
 
 </html>
