--- a/src/html/more/on-years.html
+++ b/src/html/more/on-years.html
@@ -33,7 +33,7 @@
     <main class="container container--main">
 
         <div style="margin-bottom: 50px">
-            <h1 class="display-3" style="margin-bottom: -10px">2023</h1>
+            <h2 class="display-3" style="margin-bottom: -10px">2023</h2>
             <p class="mb-2 fs-5 text-color-hover">22 статьи</p>
             <ul class="fs-4">
                 <li><a href="/p/how-to-sell-on-buy-markets/" class="link">Как успешно продавать на Б/У рынках</a></li>
@@ -71,7 +71,7 @@
         </div>
 
         <div style="margin-bottom: 50px">
-            <h1 class="display-4" style="margin-bottom: -8px">2022</h1>
+            <h3 class="display-4" style="margin-bottom: -8px">2022</h3>
             <p class="mb-2 fs-5 text-color-hover">15 статьей</p>
             <ul class="fs-4">
                 <li><a href="/more/archive/creagoo-is-now-available-in-vk/" class="link">Creagoo теперь доступен в ВК</a></li>
@@ -97,7 +97,7 @@
         </div>
 
         <div style="margin-bottom: 50px">
-            <h1 class="display-5" style="margin-bottom: -7px">2021</h1>
+            <h4 class="display-5" style="margin-bottom: -7px">2021</h4>
             <p class="mb-2 fs-5 text-color-hover">5 статьей</p>
             <ul class="fs-4">
                 <li><a href="/more/archive/belated-result/" class="link">Запоздалый результат</a></li>
@@ -112,7 +112,7 @@
         </div>
 
         <div style="margin-bottom: 50px">
-            <h1 style="margin-bottom: -6px">2020</h1>
+            <h5 class="fs-1" style="margin-bottom: -6px">2020</h5>
             <p class="mb-2 fs-5 text-color-hover">12 статьей</p>
             <ul class="fs-4">
                 <li><a href="/more/archive/babka-on-the-hunt-light-development-is-progressing-successfully/" class="link">Babka On The
