--- a/src/parts/head.html
+++ b/src/parts/head.html
@@ -3,30 +3,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Special — полезное медиа в удобном формате">
+    <meta name="description" content="Медиа Special: удобный формат, актуальные записи, интересные события">
     <meta name="keywords" content="спешиал, медиа, креагу, даниил дыбка, дыбка, дыбка медиа">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Special — полезное медиа в удобном формате">
-    <meta property="og:site_name" content="Special — полезное медиа в удобном формате">
-    <meta property="og:description" content="Special — полезное медиа в удобном формате">
+    <meta property="og:title" content="Медиа Special: удобный формат, актуальные записи, интересные события">
+    <meta property="og:site_name" content="Медиа Special: удобный формат, актуальные записи, интересные события">
+    <meta property="og:description" content="Медиа Special: удобный формат, актуальные записи, интересные события">
     <meta property="og:url" content="https://news.dybka.ru/">
     <meta property="og:image" content="https://news.dybka.ru/img/logo/cap.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Special — полезное медиа в удобном формате">
-    <meta name="twitter:description" content="Special — полезное медиа в удобном формате">
+    <meta name="twitter:title" content="Медиа Special: удобный формат, актуальные записи, интересные события">
+    <meta name="twitter:description" content="Медиа Special: удобный формат, актуальные записи, интересные события">
     <meta name="twitter:site" content="https://news.dybka.ru/">
     <meta name="twitter:image" content="https://news.dybka.ru/img/logo/ico.ico">
     <meta name="Author" content="Дыбка Даниил">
     <link rel="manifest" href="/manifest.json">
 
     @@if(context.title != "") {
-        <title>@@title — Special</title>
+        <title>@@title | Медиа Special</title>
     }
 
     @@if(context.title == "") {
-        <title>Special — полезное медиа в удобном формате</title>
+        <title>Медиа Special: удобный формат, актуальные записи, интересные события</title>
     }
 
     <link rel="icon" href="/img/logo/ico.ico" type="image/x-icon">
