--- a/src/html/p/example/index.html
+++ b/src/html/p/example/index.html
@@ -11,7 +11,7 @@
 
         @@include('../../../parts/p--post-newdesign-title.html', {
             "color": "#fff",
-            "imagepost": "updates/",
+            "imagepost": "posts/p016/cap.jpg",
             "title": "Название записи",
             "desc": "Описание записи.",
             "alt": "Дополнительная информация о изображении"
