--- a/src/html/about.html
+++ b/src/html/about.html
@@ -33,90 +33,81 @@
 			<div class="fs-5 mb-5">
 				<h2>Что такое Special?</h2>
 				<p>
-					Special — это открытый источник медиа сайтов
-					<a href="//dybka.ru" class="link">dybka.ru</a>,
-					<a href="//it.dybka.ru" class="link">it.dybka.ru</a>,
-					<a href="//creagoo.ru" class="link">creagoo.ru</a> и других,
-					принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link"
-						>dybka.ru</a
-					>).
+					Special — это прекрасное медиа сообщество, которое собирает людей
+					вокруг интересующих их направлений: техника, программирование, дизайн
+					и многое другое. Медиа Special предоставляет возможность любому человеку
+					на бесплатной основе опубликовать свою статью.
 				</p>
 				<p>
-					Главная задача сайта Special — простым языком и удобными способами
-					доносить полезную информацию до людей. Сайт Special предоставляет
-					удобный доступ к чтению статей. Выбор, на какой платформе производить
-					чтение находится за вами.
+					Удобная площадка Special располагается на <a href="//news.dybka.ru" class="link">news.dybka.ru</a>.
+					Доступ в телеграме, Яндекс Дзене, сообществе ВК. Платформа простая для изучения с красивым
+					и технологичным дизайном. С открытым кодом платформы медиа Special.
 				</p>
 			</div>
 			<div class="fs-5 mb-5">
 				<h2>Стать автором</h2>
 				<p>
-					У вас есть возможность предложить интересную статью для сайта Special.
-					Для добавления вас в качестве автора на сайте Special достаточно
-					обратиться на почтовый адрес
-					<a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+					Вы можете стать автором на сайте медиа Special. Для этого следует обратиться
+					на соответствующую страницу, где расположена подробная инструкция о том, как
+					опубликовать статью на сайте медиа Special.
 				</p>
-				<p>
-					К заявке на почтовый адрес Вам следует прикрепить следующие материалы:
-					название поста, содержимое поста (в содержимом укажите, что является
-					текстом, а что названием), фотографию поста.
-				</p>
-				<p>
-					Также нужно будет указать ваше имя, фамилию и желаемую аватарку
-					(128x128), которая будет отображаться на вашей странице автора статей.
-				</p>
-				<p>
-					ваша заявка будет рассмотрена. В случае положительной проверки ваш
-					пост будет опубликован на сайте Special.
-				</p>
-			</div>
-			<div class="fs-5 mb-5">
-				<h2>Запрещенные темы</h2>
-				<p>
-					На сайте Special запрещено выкладывать материалы с ненормативной
-					лексикой, оскорблениями, разжиганием ненависти. На обсуждение
-					запрещены: темы войны, темы религии, «острые» темы и прочие, которые
-					могут вызвать общих негатив у людей.
-				</p>
-				<p>
-					Для публикации запрещены рекламные посты без согласования модераторов
-					на их публикацию. Любое наличие рекламных отображений и прочего будет
-					являться причиной для отказа публикации материала.
-				</p>
-				<p>
-					Все публикуемые посты проходят проверку модераторами. Опубликовать
-					пост без согласия модераторов не предоставляется возможным.
+				<p class="d-flex align-items-center">
+					<a href="/write-post.html" class="link me-3">
+						Открыть
+					</a>
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="icon"
+						viewBox="0 0 16 16">
+						<path fill-rule="evenodd"
+							d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 8.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z" />
+					</svg>
 				</p>
 			</div>
 			<div class="fs-5 mb-5">
 				<h2>Реклама на сайте</h2>
 				<p>
-					На сайте медиа Special у вас есть возможность заказать рекламу. Вам
-					следует обратиться на почтовый адрес
-					<a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
-				</p>
-				<p>
-					Свяжитесь по почтовому адресу, опишите ваше предложение. Также укажите
-					формат, в котором вы хотите видеть рекламу. В случае одобрения
-					публикации рекламы, медиа Special выполнит ваши требования по
-					публикации рекламы на сайте медиа Special.
+					Медиа Special не располагает размещением рекламных ваканский на
+					сайте медиа Special. Но, тем не менее, у вас есть возможность обратиться
+					с рекламным предложением на адрес: <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+					Любые рекламные предложения, нарушающие законодательство РФ, будут отклонены.
+					К отклонению: казино, ставки, мошеннические схемы.
 				</p>
 			</div>
-			<div class="fs-5 mb-5">
-				<h2>Запрещено к рекламе</h2>
-				<p>
-					К рекламе запрещены все темы, являющиеся запрещенными на территории
-					РФ. В случае с медиа Special запрещены для рекламы: запрещенные
-					средства, продукты 18+, различные казино, букмекерские компании,
-					платформы, в основе которых лежит обман пользователей.
-				</p>
-				<p>
-					В том случае, если ваш продукт не несет целей обмануть аудиторию,
-					заработать на этом и не является запрещенным на территории РФ и на
-					сайте Special, то вы можете рассчитывать на публикацию рекламы, в
-					случае заинтересованности с обеих сторон (вашей и медиа Special).
-				</p>
+
+			<div class="bg-light--me fs-5 p-3 mb-5" style="border-radius: 12px">
+				<div class="mb-5">
+					<h3>Содержимое статей</h3>
+					<p>
+						Публикуемые метариалы на сайте медиа Special 100% проходят
+						проверку модераторами, после которой статьи находятся в
+						«черновом варианте».
+					</p>
+					<p>
+						На данном этапе следует проверить статью на наличие ошибок в
+						написании слов с помощью нейросетей. Если все этапы
+						перед публикацией статьи были пройдены успешно —
+						она отправляется в список на публикацию. Через некоторое
+						время статья будет размещена на сайте и других ресурсах
+						медиа Special
+					</p>
+				</div>
+				<div class="mb-5">
+					<h3>Безопасность пользования сайтом</h3>
+					<p>
+						Сайт медиа Special полностью безопасен для использования. На сайте
+						используется SSL-сертификат, обеспечивающий быструю загрузку содержимого
+						по защищенному каналу.
+					</p>
+					<p>
+						На сайте медиа Special не используется форм-регистрации, от пользователя
+						не требуется вводить какое-либо содержимое. Благодаря чему полностью исключены
+						«взломы» и «утечки данных».
+					</p>
+				</div>
+				<h3>Развитие на площадках</h3>
+				<h3>Стратегическое развитие</h3>
+				<h3>Доступность содержимого</h3>
 			</div>
+
 			<div class="fs-5 mb-5">
 				<h2>Безопасность сайта</h2>
 				<p>
