edit default pages

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -6,18 +6,20 @@
 		@@include('../parts/header.html', { })
 
 		<main class="container">
-			<div class="border-bottom mb-5">
-				<h1>Ссылки Special</h1>
+			<div class="border-bottom mb-3">
+				<h1>Ссылки</h1>
 			</div>
-			<div class="fs-5 mb-5">
-				<ul class="mb-4">
-					<li>О проекте Special (текущая страница)</li>
-					<li><a href="/updates.html" class="link"> Обновления Special </a></li>
-					<li><a href="/rss.xml" class="link"> Получить RSS статей </a></li>
-					<li><a href="/write-post.html" class="link"> Написать статью </a></li>
-					<li><a href="/translate.html" class="link"> Перевод сайта </a></li>
+			<div class="fs-3 mb-5">
+				<ul class="mb-3">
+					<li>О проекте Special</li>
+					<li><a href="/updates.html" class="link"> Обновления</a></li>
+					<li><a href="/rss.xml" class="link">RSS статей</a></li>
+					<li><a href="/write-post.html" class="link">Написать статью</a></li>
+					<li><a href="/translate.html" class="link">Перевод</a></li>
+				</ul>
+				<ul class="mb-3">
 					<li>
-						<a href="/contact.html" class="link"> Связаться с автором </a>
+						<a href="/contact.html" class="link">Связаться с автором</a>
 					</li>
 					<li>
 						<a href="//it.dybka.ru" target="_blank" class="link">
@@ -28,7 +30,50 @@
 			</div>
 
 			<div class="border-bottom mb-5">
-				<h1>О проекте Special</h1>
+				<h2 class="h1">О проекте Special</h2>
+			</div>
+			<div class="fs-3 mb-5">
+				<p>
+					Содержимое страницы:
+				</p>
+				<ul>
+					<li>
+						Что такое Special?
+					</li>
+					<li>
+						Стать автором
+					</li>
+					<li>
+						Реклама на сайте
+					</li>
+					<li>
+						Содержимое статей
+					</li>
+					<li>
+						Безопасность пользования сайтом
+					</li>
+					<li>
+						Развитие на площадках
+					</li>
+					<li>
+						Стратегическое развитие
+					</li>
+					<li>
+						Доступность содержимого
+					</li>
+					<li>
+						Поддержать проект
+					</li>
+					<li>
+						Исходники содержимого
+					</li>
+					<li>
+						Шрифты на сайте
+					</li>
+					<li>
+						Автор и начало разработки
+					</li>
+				</ul>
 			</div>
 			<div class="fs-5 mb-5">
 				<h2>Что такое Special?</h2>
@@ -103,76 +148,59 @@
 						«взломы» и «утечки данных».
 					</p>
 				</div>
-				<h3>Развитие на площадках</h3>
-				<h3>Стратегическое развитие</h3>
+				<div class="mb-5">
+					<h3>Развитие на площадках</h3>
+					<p>
+						Медиа Special развивается на таких площадках как: сайт, телеграм,
+						Яндекс Дзен, ВК. К 2024 году планируется увеличить количество площадок на 75%.
+					</p>
+				</div>
+				<div class="mb-5">
+					<h3>Стратегическое развитие</h3>
+					<p>
+						Медиа Special распространяется на ресурсах телеграма, Яндекс Дзена и ВКонтакте.
+						Планируется реализовать личный кабинет пользователя на сайте медиа Special для
+						возможности комментировать записи, персонализировать содержимое.
+					</p>
+					<p>
+						Планируется увеличить количество ресурсов, на которых распространяется медиа Special.
+						До 2025 года планируется интегрировать от 3-х новых авторов статей на сайте медиа
+						Special.
+					</p>
+				</div>
 				<h3>Доступность содержимого</h3>
+				<p>
+					Содержимое медиа Special доступно для лиц с ограниченными возможностями здоровья благодаря
+					следующим практикам в разработке сайте медиа Special:
+				</p>
+				<ol>
+					<li>
+						Сайт использует правильно настроенный DOM
+					</li>
+					<li>
+						Каждый элемент описывается правильным тегом
+					</li>
+					<li>
+						Работа с интерактивными элементами прописана верно,
+						имеется возможность управления сайтом с помощью клавиатуры для
+						незрячих пользователей
+					</li>
+					<li>
+						Прописаны дополнительные описания для картинок, кнопок. Имеются дополнительные
+						тексты-описания для лучшего формирования понимания, о чем говорится в содержимом.
+					</li>
+				</ol>
 			</div>
 
 			<div class="fs-5 mb-5">
-				<h2>Безопасность сайта</h2>
-				<p>
-					Доменный адрес использует защищенный протокол подключения.
-					Используется SSL-сертификат для безопасного и быстрого подключения и
-					получения информации. Страницы сайта формируются до публикации и
-					являются «статическими».
-				</p>
-			</div>
-			<div class="fs-5 mb-5">
-				<h2>Техническая оптимизация</h2>
-				<p>
-					Большое количество внимания было уделено на активную оптимизацию
-					загрузки сайта, доступности содержимого с клавиатуры, адаптивного
-					отображения сайта на разных девайсах, возможности ознакомиться с
-					содержимым при разных условиях.
-				</p>
-				<p>
-					вышеперечисленные критерии не являются обязательными, это факт. В
-					создании сайта есть лишь «рекомендации». Но также существуют и отличия
-					между хорошим сайтом и плохим. Плохим сайтом не хочется пользоваться,
-					тогда какой смысл от этого сайта, если пользователь не хочет получать
-					информацию от сайта?
-				</p>
-				<p>
-					Активно уделяется внимание пользователю. Существует большое количество
-					людей, которые тестируют отображение сайта. Это действительно важные
-					факторы, которые помогают пользователям дольше оставаться на сайте.
-				</p>
-			</div>
-			<div class="fs-5 mb-5">
-				<h2>Доступность сайта</h2>
-				<p>
-					Сайт Special доступен для всех пользователей. Имеется возможность
-					перемещаться по элементам с помощью клавиатуры и получать доступ о
-					информации интерактивных элементах. Настроена возможность
-					использования программ для чтения текста с экрана. Прописаны
-					параметры-описания для изображений, чтобы все люди могли узнать, о чем
-					нам говорит размещенная на сайте картинка.
-				</p>
-			</div>
-			<div class="fs-5 mb-5">
 				<h2>Поддержать проект</h2>
 				<p>
-					Поддержать проект вы можете одним из способов: написать сообщение
-					автору (<a href="//t.me/ddybka" class="link" target="_blank"
-						>@ddybka</a
-					>), написать статью для Special (<a
-						href="/write-post.html"
-						class="link"
-						>Как?</a
-					>).
-				</p>
-				<p>
-					Ссылка на репозиторий GitHub:
-					<a
-						href="//github.com/DanyaBooba/special-gulp-2023"
-						class="link"
-						target="_blank"
-						>Открыть</a
-					>
+					Вы можете поддержать проект, если свяжетесь с автором. Если хотите, можете выразить благодарность
+					разработчику за его труд. Дополнительно, вы можете написать статью для медиа Special.
 				</p>
 			</div>
 			<div class="fs-5 mb-5">
-				<h2>Исходники</h2>
+				<h2>Исходники содержимого</h2>
 				<ul>
 					<li>
 						<a href="/download/special-dark.zip" class="link">Логотип черный</a>
@@ -180,28 +208,31 @@
 					<li>
 						<a href="/download/special-white.zip" class="link">Логотип белый</a>
 					</li>
+					<li>
+						<a href="//github.com/DanyaBooba/special-gulp-2023" class="link" target="_blank">GitHub</a>
+					</li>
 				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<h2>Шрифты</h2>
-				<p>
-					На сайте используется шрифт HalvarBreit начертания Bold для
-					заголовков.
-				</p>
-				<p>
-					На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold
-					для остального текста.
-				</p>
+				<h2>Шрифты на сайте</h2>
+				<ul>
+					<li>
+						На сайте используется шрифт HalvarBreit начертания Bold для
+						заголовков.
+					</li>
+					<li>
+						На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold
+						для остального текста.
+					</li>
+				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<h2>Автор</h2>
+				<h2>Автор и начало разработки</h2>
 				<p>
-					Сайт разрабатывается Даниилом Дыбка (<a
-						href="//dybka.ru"
-						target="_blank"
-						class="link"
-						>dybka.ru</a
-					>) с 15.01.2023.
+					Автор проекта: Даниил Дыбка. <a href="//dybka.ru" class="link" target="_blank">Читать подробнее</a>.
+				</p>
+				<p>
+					Начало разработки: 15 января 2023 года (15.01.2023).
 				</p>
 			</div>
 		</main>
