--- a/src/html/translate.html
+++ b/src/html/translate.html
@@ -9,50 +9,60 @@
 
     })
 
-    <div class="container mb-3 text-center">
-        <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
-            <div class="col">
-                <div class="bg-light--me" style="border-radius: 8px;">
-                    <div class="p-4">
-                        <h1 class="h5 mb-3">Русский язык</h1>
-                        <div class="d-flex justify-content-center align-items-center">
-                            Текущий
-                        </div>
-                    </div>
+    <div class="container">
+
+        <div class="border-bottom mb-3">
+            <h1>Ссылки</h1>
+        </div>
+        <div class="fs-3 mb-5">
+            <ul class="mb-3">
+                <li><a href="/about.html" class="link">О проекте Special</a></li>
+                <li><a href="/updates.html" class="link">Обновления</a></li>
+                <li><a href="/rss.xml" class="link">RSS статей</a></li>
+                <li><a href="/write-post.html" class="link">Написать статью</a></li>
+                <li>Перевод</li>
+            </ul>
+            <ul class="mb-3">
+                <li>
+                    <a href="/contact.html" class="link">Связаться с автором</a>
+                </li>
+                <li>
+                    <a href="//it.dybka.ru" target="_blank" class="link">
+                        Еще больше от dybka.ru
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="d-flex flex-column">
+            <div class="bg-light--me mb-3 col-md-4" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Русский язык</p>
+                    <p class="mb-0 fs-5">Текущий язык.</p>
                 </div>
             </div>
-            <div class="col">
-                <div class="bg-light--me" style="border-radius: 8px;">
-                    <div class="p-4">
-                        <h1 class="h5 mb-3">Английский</h1>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <a href="/en/" class="link">
-                                Перевести
-                            </a>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#9d9d9d" class="ms-3"
-                                viewBox="0 0 16 16">
-                                <path
-                                    d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
-                            </svg>
-                        </div>
-                    </div>
+            <div class="bg-light--me mb-3 col-md-4" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Английский язык</p>
+                    <p class="mb-0 fs-5">Извините, находится на тех. обслуживании.</p>
                 </div>
             </div>
-            <div class="col">
-                <div class="bg-light--me" style="border-radius: 8px;">
-                    <div class="p-4">
-                        <h1 class="h5 mb-3">Китайский (中文)</h1>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <a href="/cn/" class="link">
-                                Перевести
-                            </a>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#9d9d9d" class="ms-3"
-                                viewBox="0 0 16 16">
-                                <path
-                                    d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
-                            </svg>
-                        </div>
-                    </div>
+            <div class="bg-light--me mb-3 col-md-4" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Китайский язык</p>
+                    <p class="mb-0 fs-5">Извините, находится на тех. обслуживании.</p>
+                </div>
+            </div>
+            <div class="bg-light--me mb-3 col-md-4" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Хинди</p>
+                    <p class="mb-0 fs-5">Извините, находится на тех. обслуживании.</p>
+                </div>
+            </div>
+            <div class="bg-light--me mb-3 col-md-4" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Арабский язык</p>
+                    <p class="mb-0 fs-5">Извините, находится на тех. обслуживании.</p>
                 </div>
             </div>
         </div>
