--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -12,11 +12,35 @@
 		@@include('../parts/header.html', { })
 
 		<main class="container">
+
+			<div class="border-bottom mb-3">
+				<h1>Ссылки</h1>
+			</div>
+			<div class="fs-3 mb-5">
+				<ul class="mb-3">
+					<li><a href="/about.html" class="link">О проекте Special</a></li>
+					<li>Обновления</li>
+					<li><a href="/rss.xml" class="link">RSS статей</a></li>
+					<li><a href="/write-post.html" class="link">Написать статью</a></li>
+					<li><a href="/translate.html" class="link">Перевод</a></li>
+				</ul>
+				<ul class="mb-3">
+					<li>
+						<a href="/contact.html" class="link">Связаться с автором</a>
+					</li>
+					<li>
+						<a href="//it.dybka.ru" target="_blank" class="link">
+							Еще больше от dybka.ru
+						</a>
+					</li>
+				</ul>
+			</div>
+
 			<div class="border-bottom mb-5">
-				<h1>Обновления Special</h1>
+				<h2 class="h1">Обновления Special</h2>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 01.05.2023</p>
+				<p class="text--more fs-3"> 01.05.2023</p>
 				<ul>
 					<li>Исправление ошибок</li>
 					<li>Новый дизайн</li>
@@ -24,10 +48,10 @@
 					<li>Новый шрифт</li>
 					<li>Архив статьей.</li>
 				</ul>
-				<a href="/updates/news-archive-share-design-update/" class="link">Читать</a>
+				<a href="/updates/news-archive-share-design-update/" class="link fs-4">Читать</a>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 28.04.2023</p>
+				<p class="text--more fs-3"> 28.04.2023</p>
 				<ul>
 					<li>Исправление ошибок</li>
 					<li>Дата написания в XML</li>
@@ -37,7 +61,7 @@
 				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 16.04.2023</p>
+				<p class="text--more fs-3"> 16.04.2023</p>
 				<ul>
 					<li>Обновлен интерфейс</li>
 					<li>Многоязычность сайта</li>
@@ -46,10 +70,10 @@
 					<li>Открытый код платформы</li>
 					<li>Новые категории.</li>
 				</ul>
-				<a href="/updates/great-news-channel-special/" class="link">Читать</a>
+				<a href="/updates/great-news-channel-special/" class="link fs-4">Читать</a>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 19.03.23</p>
+				<p class="text--more fs-3"> 19.03.23</p>
 				<ul>
 					<li>Улучшено визуальное состовляющее</li>
 					<li>Упрощен дизайн</li>
@@ -57,25 +81,25 @@
 				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 18.03.23</p>
+				<p class="text--more fs-3"> 18.03.23</p>
 				<ul>
 					<li>Используется технология GPT-4 в статьях</li>
 					<li>Возможность написать статью пользователю.</li>
 				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 17.03.23</p>
+				<p class="text--more fs-3"> 17.03.23</p>
 				<ul>
 					<li>Смена активного шрифта на сайте</li>
 					<li>Обновление отображения страниц</li>
 					<li>Список статей в конце активной</li>
 					<li>Работа над переводом сайта</li>
-					<li>Изменения в футере</li>
+					<li>Обновления в футере</li>
 					<li>Добавлена категория «Игры».</li>
 				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 20.02.23</p>
+				<p class="text--more fs-3"> 20.02.23</p>
 				<ul>
 					<li>Теперь в футере больше красоты и возможностей</li>
 					<li>Добавлены RSS-ленты</li>
@@ -85,7 +109,7 @@
 				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 18.02.23</p>
+				<p class="text--more fs-3"> 18.02.23</p>
 				<ul>
 					<li>Добавлена категория «Обновления»</li>
 					<li>
@@ -96,7 +120,7 @@
 				</ul>
 			</div>
 			<div class="fs-5 mb-5">
-				<p class="text--more fs-6">Изменения 06.02.23</p>
+				<p class="text--more fs-3"> 15.01.23</p>
 				<p>выход в продакшен.</p>
 			</div>
 		</main>
