--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -11,34 +11,31 @@
 
     <main class="container">
 
-        <div class="border-bottom mb-5">
-            <h1>Написать статью</h1>
+        <div class="border-bottom mb-3">
+            <h1>Ссылки</h1>
         </div>
-        <div class="fs-5 mb-5">
-
-            <ul class="mb-4">
-                <li><a href="/about.html" class="link">
-                    О проекте Special
-                </a></li>
-                <li><a href="/updates.html" class="link">
-                        Обновления Special
-                    </a></li>
-                <li><a href="/rss.xml" class="link">
-                        Получить RSS статей
-                    </a></li>
-                <li>
-                    Написать статью (текущая страница)
-                </li>
-                <li><a href="/translate.html" class="link">
-                        Перевод сайта
-                    </a></li>
-                <li><a href="/contact.html" class="link">
-                    Связаться с автором
-                </a></li>
-                <li><a href="//it.dybka.ru" target="_blank" class="link">
-                        Еще больше от dybka.ru
-                    </a></li>
+        <div class="fs-3 mb-5">
+            <ul class="mb-3">
+                <li><a href="/about.html" class="link">О проекте Special</a></li>
+                <li><a href="/updates.html" class="link">Обновления</a></li>
+                <li><a href="/rss.xml" class="link">RSS статей</a></li>
+                <li>Написать статью</li>
+                <li><a href="/translate.html" class="link">Перевод</a></li>
             </ul>
+            <ul class="mb-3">
+                <li>
+                    <a href="/contact.html" class="link">Связаться с автором</a>
+                </li>
+                <li>
+                    <a href="//it.dybka.ru" target="_blank" class="link">
+                        Еще больше от dybka.ru
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="border-bottom mb-5">
+            <h2 class="h1">Написать статью</h2>
         </div>
 
         <div class="fs-5 mb-5">
