--- a/src/html/privacy/index.html
+++ b/src/html/privacy/index.html
@@ -9,60 +9,41 @@
 
     })
 
-    <div class="container mb-3 text-center">
-        <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
-            <div class="col">
-                <div class="bg-light--me" style="border-radius: 8px;">
-                    <div class="p-4">
-                        <h1 class="h5 mb-3">Политика конфиденциальности</h1>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <a href="/privacy/policy.html" class="link">
-                                Открыть
-                            </a>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#9d9d9d"
-                                class="ms-3" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
-                            </svg>
-                        </div>
-                    </div>
+    <div class="container">
+
+        <div class="d-flex flex-column">
+            <div class="bg-light--me mb-3 col-md-6" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Политика конфиденциальности</p>
+                    <p class="mb-0 fs-5">
+                        <a href="/privacy/policy.html" class="link">
+                            Открыть
+                        </a>
+                    </p>
                 </div>
             </div>
-            <div class="col">
-                <div class="bg-light--me" style="border-radius: 8px;">
-                    <div class="p-4">
-                        <h1 class="h5 mb-3">Политика обработки файлов cookie</h1>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <a href="/privacy/cookie.html" class="link">
-                                Открыть
-                            </a>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#9d9d9d" class="ms-3"
-                                viewBox="0 0 16 16">
-                                <path
-                                    d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
-                            </svg>
-                        </div>
-                    </div>
+            <div class="bg-light--me mb-3 col-md-6" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Политика обработки cookie</p>
+                    <p class="mb-0 fs-5">
+                        <a href="/privacy/cookie.html" class="link">
+                            Открыть
+                        </a>
+                    </p>
                 </div>
             </div>
-            <div class="col">
-                <div class="bg-light--me" style="border-radius: 8px;">
-                    <div class="p-4">
-                        <h1 class="h5 mb-3">Условия использования сайта</h1>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <a href="/privacy/termsofuse.html" class="link">
-                                Открыть
-                            </a>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#9d9d9d" class="ms-3"
-                                viewBox="0 0 16 16">
-                                <path
-                                    d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
-                            </svg>
-                        </div>
-                    </div>
+            <div class="bg-light--me mb-3 col-md-6" style="border-radius: 12px">
+                <div class="p-4">
+                    <p class="h3 mb-2">Условия использования</p>
+                    <p class="mb-0 fs-5">
+                        <a href="/privacy/termsofuse.html" class="link">
+                            Открыть
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
+
     </div>
 
     @@include('../../parts/footer.html', {
