work at footer and favicon

--- a/src/parts/head.html
+++ b/src/parts/head.html
@@ -1,52 +1,86 @@
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Медиа Special: удобный формат, актуальные записи, интересные события">
-    <meta name="keywords" content="спешиал, медиа, креагу, даниил дыбка, дыбка, дыбка медиа">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Медиа Special: удобный формат, актуальные записи, интересные события">
-    <meta property="og:site_name" content="Медиа Special: удобный формат, актуальные записи, интересные события">
-    <meta property="og:description" content="Медиа Special: удобный формат, актуальные записи, интересные события">
-    <meta property="og:url" content="https://news.dybka.ru/">
-    <meta property="og:image" content="https://news.dybka.ru/img/logo/cap.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Медиа Special: удобный формат, актуальные записи, интересные события">
-    <meta name="twitter:description" content="Медиа Special: удобный формат, актуальные записи, интересные события">
-    <meta name="twitter:site" content="https://news.dybka.ru/">
-    <meta name="twitter:image" content="https://news.dybka.ru/img/logo/ico.ico">
-    <meta name="Author" content="Дыбка Даниил">
-    <link rel="manifest" href="/manifest.json">
+	<meta
+		name="description"
+		content="Медиа Special: удобный формат, актуальные записи, интересные события"
+	/>
+	<meta
+		name="keywords"
+		content="спешиал, медиа, креагу, даниил дыбка, дыбка, дыбка медиа"
+	/>
+	<meta property="og:type" content="website" />
+	<meta
+		property="og:title"
+		content="Медиа Special: удобный формат, актуальные записи, интересные события"
+	/>
+	<meta
+		property="og:site_name"
+		content="Медиа Special: удобный формат, актуальные записи, интересные события"
+	/>
+	<meta
+		property="og:description"
+		content="Медиа Special: удобный формат, актуальные записи, интересные события"
+	/>
+	<meta property="og:url" content="https://news.dybka.ru/" />
+	<meta property="og:image" content="https://news.dybka.ru/img/logo/cap.png" />
+	<meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="600" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta
+		name="twitter:title"
+		content="Медиа Special: удобный формат, актуальные записи, интересные события"
+	/>
+	<meta
+		name="twitter:description"
+		content="Медиа Special: удобный формат, актуальные записи, интересные события"
+	/>
+	<meta name="twitter:site" content="https://news.dybka.ru/" />
+	<meta
+		name="twitter:image"
+		content="https://news.dybka.ru/img/logo/favicon.ico"
+	/>
+	<meta name="Author" content="Дыбка Даниил" />
+	<link rel="manifest" href="/manifest.json" />
 
-    @@if(context.title != "") {
-        <title>@@title | Медиа Special</title>
-    }
+	@@if(context.title != "") {
+	<title>@@title | Медиа Special</title>
+	} @@if(context.title == "") {
+	<title>
+		Медиа Special: удобный формат, актуальные записи, интересные события
+	</title>
+	}
 
-    @@if(context.title == "") {
-        <title>Медиа Special: удобный формат, актуальные записи, интересные события</title>
-    }
+	<link rel="icon" href="/img/logo/favicon.ico" type="image/x-icon" />
+	<meta name="theme-color" content="#000" />
 
-    <link rel="icon" href="/img/logo/ico.ico" type="image/x-icon">
-    <meta name="theme-color" content="#000">
+	<script>
+		if (matchMedia("(prefers-color-scheme: dark)").media === "not all") {
+			document.documentElement.style.display = "none";
+			document.head.insertAdjacentHTML(
+				"beforeend",
+				'<link rel="stylesheet" href="/css/light.css" onload="document.documentElement.style.display=\'\'">'
+			);
+		}
+	</script>
 
-    <script>
-        if (matchMedia('(prefers-color-scheme: dark)').media === 'not all') {
-            document.documentElement.style.display = 'none';
-            document.head.insertAdjacentHTML(
-                'beforeend',
-                '<link rel="stylesheet" href="/css/light.css" onload="document.documentElement.style.display=\'\'">'
-            );
-        }
-    </script>
+	<meta name="color-scheme" content="light dark" />
+	<link
+		rel="stylesheet"
+		id="stylesheetlight"
+		href="/css/light.css"
+		media="(prefers-color-scheme: light)"
+	/>
+	<link
+		rel="stylesheet"
+		id="stylesheetdark"
+		href="/css/dark.css"
+		media="(prefers-color-scheme: dark)"
+	/>
 
-    <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" id="stylesheetlight" href="/css/light.css" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" id="stylesheetdark" href="/css/dark.css" media="(prefers-color-scheme: dark)">
-
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <!-- <link rel="stylesheet" href="/css/grid.css"> -->
+	<link rel="stylesheet" href="/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/css/index.css" />
+	<!-- <link rel="stylesheet" href="/css/grid.css"> -->
 </head>
